cmake_minimum_required(VERSION 3.24)
project(Proyecto_Programacion_III)

set(CMAKE_CXX_STANDARD 17)

add_executable(Proyecto_Programacion_III main.cpp Estructuras/ArbolBinario.h Estructuras/Lista.h Estructuras/nodo.h Estructuras/NodoArbol.h Estructuras/Pila.h Estructuras/HashMap/HashEntry.h Estructuras/HashMap/HashMap.h Estructuras/HashMap/HashMapList.h Estructuras/HashMap/Lista.h Estructuras/HashMap/Nodo.h)
